# harvey

./: .clang-format  .gitignore  .gitmodules  .mailmap  .mention-bot  .mention_bot  .pullapprove.yml  .travis.yaml  .travis.yml  AUTH_HOWTO  BUGLIST  BUILD  BUILD.conf  BUILDTOOLCHAIN  BUILD_ON_UNIX  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  LICENSE  LICENSE.gpl  LICENSE.harvey  LICENSE.lucida  LICENSE.mit  LICENSE.old  Makefile  NOTES.rminnich  NOTICE  NOTICE.old  README  README.md  RUN_ME_FIRST  RUN_REGRESSIONS  SETUP  SETUP.plan9  SETUP386  _conform.map  bldy.cfg  bootstrap.sh  build.json  buildconfig  (+18 more)
sys/src/cmd/gs/src/: .cvsignore  Makefile.in  all-arch.mak  ansi2knr.c  append_l.com  bcc32.cfg  bcwin32.mak  bench.c  bfont.h  btoken.h  bughunt.sh  catmake  ccfont.h  ccgs  cfonts.mak  close_.h  configure.ac  contrib.mak  copy_one.com  cp.bat  cp.cmd  ctype_.h  devs.mak  dirent_.h  dmmain.c  dmmain.r  dos_.h  dpmain.c  dpmainc.c  dscparse.c  dscparse.h  dstack.h  dvx-gcc.mak  dvx-head.mak  dvx-tail.mak  dw32c.def  dwdll.c  dwdll.cpp  dwdll.h  dwimg.c  (+1268 more)
sys/src/cmd/links/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PATCH-gpm-1.20.0-smooth-cursor  README  SITES  TODO  acconfig.h  aclocal.m4  af_unix.c  arrow.inc  atheos.cpp  auth.c  bfu.c  bookmarks.c  builtin.c  cache.c  cfg.h  charsets.c  codepage.h  codepage.inc  config.cache  config.guess  config.h  config.h.in  config.h.linux  config.status  configure  configure.in  connect.c  context.c  cookies.c  default.c  dip.c  dither.c  (+64 more)
sys/src/cmd/links/dreg/: beos.c  directfb.c  finger.c  framebuffer.c  os_dep.c  os_dep.h  os_depx.h  pmshell.c  smb.c  svgalib.c  win32.c  x.c
sys/src/cmd/links/jpeg/: Makefile  mkfile
sys/src/cmd/links/png/: mkfile  pngtest
sys/src/cmd/links/zlib/: mkfile
sys/src/cmd/tex/kpathsea/: _envsetup.c  _texmf.cnf  _xputenv.c  absolute.c  absolute.h  access.c  acconfig.h  atou.c  basename.c  c-auto.h  c-auto.in  c-ctype.h  c-dir.h  c-errno.h  c-fopen.h  c-limits.h  c-memstr.h  c-minmax.h  c-namemx.h  c-pathch.h  c-pathmx.h  c-proto.h  c-stat.h  c-std.h  c-unistd.h  c-vararg.h  cnf.c  cnf.h  concat.c  concat3.c  concatn.c  concatn.h  config.cache  config.h  configure.in  db.c  db.h  debug.c  debug.h  default.h  (+94 more)
sys/src/cmd/tex/kpathsea/Doc/: AUTHORS  BUGS  ChangeLog  HIER  INSTALL  Makefile  Makefile.in  NEWS  PROJECTS  README  README.CONFIGURE  access.man  bugs.texi  hier.texi  install.texi  kpathsea.info  kpathsea.texi  kpsestat.man  kpsewhich.man  readlink.man  unixtex.texi
sys/src/cmd/tex/web2c/: AUTHORS  AUTHORS.W2C  COPYING  ChangeLog  ChangeLog.W2C  INSTALL  MACHINES  MACHINES.W2C  Makefile  Makefile.in  Makefile.orig  NEWS  PROBLEMS  PROBLEMS.W2C  PROJECTS  PROJECTS.W2C  README  README.W2C  README.ape  README.local  VERSION  c-auto.h  c-auto.in  config.h  config.status  configure  configure.in  cpascal.h  depend.make  help.h  kpathsea.make  mkfile  site.h.orig  stamp-auto  stamp-auto.in  texmfmem.h  texmfmp.c  texmfmp.h  texmfmp.mkfile  writeo  (+1 more)
sys/src/cmd/tex/web2c/bibtex/: ChangeLog  Makefile  alpha.bst  bib.h  bibext.c  bibtex.c  bibtex.ch  bibtex.defines  bibtex.p  bibtex.web  btxbst.doc  btxdoc.aux  btxdoc.bbl  btxdoc.xua  cbibtex.ch  coerce.h  convert  mkfile  small.diff  unsrt.bst  xampl.bib
sys/src/cmd/tex/web2c/doc/: Makefile  Makefile.in  README  install.texi  ref.aux  ref.bbl  ref.tex  ref.txi  texinfo.bst  web2c.aux  web2c.cps  web2c.info  web2c.info-1  web2c.info-2  web2c.info-3  web2c.info-4  web2c.texi
sys/src/cmd/tex/web2c/dviutil/: ChangeLog  Makefile  dvicopy.c  dvicopy.ch  dvicopy.h  dvicopy.p  dvicopy.web  mkfile
sys/src/cmd/tex/web2c/fontutil/: CONTENTS.tex  ChangeLog  Makefile  convert  extra.c  extra.h  mkfile  pktogf.c  pktogf.ch  pktogf.h  pktogf.p  pktogf.web  pktype.c  pktype.ch  pktype.dvi  pktype.h  pktype.p  pktype.tex  pktype.web  vftovp.c  vftovp.ch  vftovp.h  vftovp.p  vftovp.web  vptovf.c  vptovf.ch  vptovf.h  vptovf.p  vptovf.web
sys/src/cmd/tex/web2c/lib/: ChangeLog  Makefile  Makefile.in  README  alloca.c  basechsuffix.c  c-auto.h  c-auto.h.in  c-errno.h  c-fopen.h  c-limits.h  c-memstr.h  c-minmax.h  c-namemx.h  c-pathch.h  c-pathmx.h  c-proto.h  c-seek.h  c-std.h  chartostring.c  common.defines  common.h  concat.c  concat3.c  config.h  convert  coredump.c  depend.make  dir-p.c  dirio.h  eofeoln.c  file-p.c  fprintreal.c  getopt.c  input2int.c  inputint.c  lib.a5  lib.a7  lib.a8  lib.ai  (+38 more)
sys/src/cmd/tex/web2c/man/: ChangeLog  Makefile  Makefile.in  README  amslatex.min  amstex.man  bibtex.man  dmp.man  dvicopy.man  dvitype.man  eplain.man  etex.man  gftodvi.man  gftopk.man  gftype.man  initex.man  initex.min  lamstex.min  latex.man  makempx.man  mf.man  mft.man  mpost.man  mpto.man  newer.man  omega.man  patgen.man  pdftex.man  pktogf.man  pktype.man  pltotf.man  pooltype.man  slitex.man  slitex.min  spell.add  tangle.man  tex.man  tftopl.man  vftovp.man  virtex.man  (+3 more)
sys/src/cmd/tex/web2c/mf/: .gdbinit  ChangeLog  Makefile  cmf.ch.orig  convert  fixcoerce.h  imf.c  ini_to_trap  mf.base  mf.big.base  mf.ch  mf.defines  mf.little.base  mf.p  mf.pool  mf.web  mf0.c  mf1.c  mf2.c  mf3.c  mf4.c  mf5.c  mf6.c  mf7.c  mf8.c  mf9.c  mfcoerce.h  mfd.h  mfini.c  mftalk.h  mkfile  small.diff  texmfmp.c  trap.c  trapenv  x1  x2  x2b  x3
sys/src/cmd/tex/web2c/mfware/: ChangeLog  Makefile  convert  gftodvi.c  gftodvi.ch  gftodvi.h  gftodvi.p  gftodvi.web  gftopk.c  gftopk.ch  gftopk.h  gftopk.p  gftopk.web  gftype.c  gftype.ch  gftype.h  gftype.p  gftype.web  mft.c  mft.ch  mft.h  mft.p  mft.web  mftext.c  mfware.defines  mfware.h  mkfile
sys/src/cmd/tex/web2c/misc/: bibtex.c  bibtex.h  bibtex.p  dvicopy.c  dvicopy.h  dvicopy.p  dvitomp.c  dvitomp.ch.p  dvitomp.h  dvitomp.p  dvitype.c  dvitype.h  dvitype.p  dvitype.web  gftodvi.c  gftodvi.h  gftodvi.p  gftopk.c  gftopk.ch  gftopk.h  gftopk.p  gftopk.web  gftype.c  gftype.ch  gftype.h  gftype.p  gftype.web  mft.c  mft.h  mft.p  mkfile  patgen.c  patgen.h  patgen.p  patgen.web  pktogf.c  pktogf.h  pktogf.p  pktype.c  pktype.ch  (+26 more)
sys/src/cmd/tex/web2c/mp/: SELFAUTOLOC  mkfile  (+20 more)
(+28282 files in other folders)
