dnl Process this file with autoconf to produce a configure script.
AC_INIT(pathsearch.c)

KPSEVERSION=3.2
AC_SUBST(KPSEVERSION)
AC_DEFINE_UNQUOTED(KPSEVERSION, "kpathsea version $KPSEVERSION")

sinclude(common.ac)

AC_OUTPUT(Makefile)
dnl Update stamp-auto, since we just remade `c-auto.h'.
date >stamp-auto
